; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/mshtml/extr_htmldoc.c_test_NavigateWithBindCtx.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/mshtml/extr_htmldoc.c_test_NavigateWithBindCtx.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@nav_url = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [10 x i8] c"uri = %s\0A\00", align 1
@VT_I4 = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [18 x i8] c"V_VT(flags) = %d\0A\00", align 1
@navHyperlink = common dso_local global i64 0, align 8
@.str.2 = private unnamed_addr constant [18 x i8] c"V_I4(flags) = %x\0A\00", align 1
@.str.3 = private unnamed_addr constant [22 x i8] c"target_frame != NULL\0A\00", align 1
@.str.4 = private unnamed_addr constant [19 x i8] c"post_data != NULL\0A\00", align 1
@.str.5 = private unnamed_addr constant [17 x i8] c"headers != NULL\0A\00", align 1
@.str.6 = private unnamed_addr constant [18 x i8] c"bind_ctx == NULL\0A\00", align 1
@.str.7 = private unnamed_addr constant [19 x i8] c"url_dragment = %s\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32*, i32*, i32*, i32*, i32*, i32)* @test_NavigateWithBindCtx to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_NavigateWithBindCtx(i32 %0, i32* %1, i32* %2, i32* %3, i32* %4, i32* %5, i32 %6) #0 {
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i32, align 4
  store i32 %0, i32* %8, align 4
  store i32* %1, i32** %9, align 8
  store i32* %2, i32** %10, align 8
  store i32* %3, i32** %11, align 8
  store i32* %4, i32** %12, align 8
  store i32* %5, i32** %13, align 8
  store i32 %6, i32* %14, align 4
  %15 = load i32, i32* %8, align 4
  %16 = load i32, i32* @nav_url, align 4
  %17 = call i32 @strcmp_wa(i32 %15, i32 %16)
  %18 = icmp ne i32 %17, 0
  %19 = xor i1 %18, true
  %20 = zext i1 %19 to i32
  %21 = load i32, i32* %8, align 4
  %22 = call i64 @wine_dbgstr_w(i32 %21)
  %23 = call i32 (i32, i8*, ...) @ok(i32 %20, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i64 %22)
  %24 = load i32*, i32** %9, align 8
  %25 = call i64 @V_VT(i32* %24)
  %26 = load i64, i64* @VT_I4, align 8
  %27 = icmp eq i64 %25, %26
  %28 = zext i1 %27 to i32
  %29 = load i32*, i32** %9, align 8
  %30 = call i64 @V_VT(i32* %29)
  %31 = call i32 (i32, i8*, ...) @ok(i32 %28, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.1, i64 0, i64 0), i64 %30)
  %32 = load i32*, i32** %9, align 8
  %33 = call i64 @V_I4(i32* %32)
  %34 = load i64, i64* @navHyperlink, align 8
  %35 = icmp eq i64 %33, %34
  %36 = zext i1 %35 to i32
  %37 = load i32*, i32** %9, align 8
  %38 = call i64 @V_I4(i32* %37)
  %39 = call i32 (i32, i8*, ...) @ok(i32 %36, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.2, i64 0, i64 0), i64 %38)
  %40 = load i32*, i32** %10, align 8
  %41 = icmp ne i32* %40, null
  %42 = xor i1 %41, true
  %43 = zext i1 %42 to i32
  %44 = call i32 (i32, i8*, ...) @ok(i32 %43, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.3, i64 0, i64 0))
  %45 = load i32*, i32** %11, align 8
  %46 = icmp ne i32* %45, null
  %47 = xor i1 %46, true
  %48 = zext i1 %47 to i32
  %49 = call i32 (i32, i8*, ...) @ok(i32 %48, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.4, i64 0, i64 0))
  %50 = load i32*, i32** %12, align 8
  %51 = icmp ne i32* %50, null
  %52 = xor i1 %51, true
  %53 = zext i1 %52 to i32
  %54 = call i32 (i32, i8*, ...) @ok(i32 %53, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.5, i64 0, i64 0))
  %55 = load i32*, i32** %13, align 8
  %56 = icmp ne i32* %55, null
  %57 = zext i1 %56 to i32
  %58 = call i32 (i32, i8*, ...) @ok(i32 %57, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.6, i64 0, i64 0))
  %59 = load i32, i32* %14, align 4
  %60 = icmp ne i32 %59, 0
  %61 = xor i1 %60, true
  %62 = zext i1 %61 to i32
  %63 = load i32, i32* %14, align 4
  %64 = call i64 @wine_dbgstr_w(i32 %63)
  %65 = call i32 (i32, i8*, ...) @ok(i32 %62, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.7, i64 0, i64 0), i64 %64)
  ret void
}

declare dso_local i32 @ok(i32, i8*, ...) #1

declare dso_local i32 @strcmp_wa(i32, i32) #1

declare dso_local i64 @wine_dbgstr_w(i32) #1

declare dso_local i64 @V_VT(i32*) #1

declare dso_local i64 @V_I4(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
